# ros_pybullet_interface

./: .buildinfo  .gitignore  CMakeLists.txt  Install_py3_melodic_Readme.txt  LICENSE  README.md  acknowledgements.html  additional_features.html  cite.html  communication_with_ros.html  create_virtual_worlds.html  develop.html  examples.html  genindex.html  index.html  install.sh  installation.html  instructions.txt  main_configuration.html  match.sh  objects.inv  overview.html  package.xml  search.html  searchindex.js
ros_pybullet_interface/: CMakeLists.txt  deps.rosinstall  package.xml  setup.py
ros_pybullet_interface/msg/: CalculateInverseKinematicsProblem.msg  JointInfo.msg  KeyboardEvent.msg  MouseEvent.msg  PybulletObject.msg  ResetDebugVisualizerCamera.msg
ros_pybullet_interface/scripts/: ros_pybullet_interface_node.py  rpbi_controls_node.py
ros_pybullet_interface/src/ros_pybullet_interface/: config.py  pybullet_collision_object.py  pybullet_dynamic_object.py  pybullet_instance.py  pybullet_object.py  pybullet_robot.py  pybullet_robot_joints.py  pybullet_robot_urdf.py  pybullet_visual_object.py  pybullet_visualizer.py  ros_node.py  tf_interface.py  utils.py
ros_pybullet_interface/src/rpbi/: config.py  pybullet_collision_object.py  pybullet_dynamic_object.py  pybullet_image_sensor.py  pybullet_instance.py  pybullet_lidar_sensor.py  pybullet_object.py  pybullet_object_pose.py  pybullet_rgbd_sensor.py  pybullet_robot.py  pybullet_robot_ik.py  pybullet_robot_joints.py  pybullet_robot_links.py  pybullet_robot_urdf.py  pybullet_sensor.py  pybullet_soft_body.py  pybullet_urdf.py  pybullet_visual_object.py  pybullet_visualizer.py  ros_node.py  tf_interface.py
ros_pybullet_interface/srv/: AddPybulletObject.srv  CalculateInverseKinematics.srv  CreateDynamicObject.srv  GetDebugVisualizerCamera.srv  ManualPybullet.srv  MatchSimToRobot.srv  PybulletBodyUniqueIds.srv  PybulletRobotJointInfo.srv  ResetEffState.srv  ResetJointState.srv  RobotInfo.srv  RunCameraBulletTime.srv
rpbi_examples/: CMakeLists.txt  deps.rosinstall  package.xml
rpbi_examples/configs/: collision_sphere.yaml  dynamic_sphere.yaml  floor.yaml  rgbd.rviz  visual_sphere.yaml
rpbi_examples/configs/basic_example/: basic_example.yaml  config.yaml
rpbi_examples/configs/basic_example_abb_yumi/: abb_yumi.yaml  config.yaml
rpbi_examples/configs/basic_example_chonk/: chonk.yaml  config.yaml  floor.yaml
rpbi_examples/configs/basic_example_human_model/: config.yaml  human_model.yaml
rpbi_examples/configs/basic_example_kinova/: config.yaml  kinova.yaml
rpbi_examples/configs/basic_example_kuka_lbr/: config.yaml  kuka_lbr.yaml
rpbi_examples/configs/basic_example_kuka_lwr/: config.yaml  kuka_lwr.yaml
rpbi_examples/configs/basic_example_nextage/: config.yaml  nextage.yaml  table.yaml
rpbi_examples/configs/basic_example_talos/: config.yaml  talos.yaml
rpbi_examples/configs/dmp_example/: kuka_lwr.yaml  pybullet.yaml
rpbi_examples/configs/human_interaction/: box.yaml  config.yaml  ik.yaml  keyboard_scale.yaml  kuka_lwr.yaml  spacenav_scale.yaml  teleop.yaml
rpbi_examples/configs/interpolation/: config.yaml  pushing_box.yaml  traj_lwr.yaml  visual_wpt1.yaml  visual_wpt2.yaml  visual_wpt3.yaml
rpbi_examples/configs/lfd/: config.yaml  kuka_lwr.yaml  pushing_box.yaml  visual_goal.yaml
rpbi_examples/configs/lidar_example/: box.yaml  config.yaml
rpbi_examples/configs/nsl/: bc_d20_1664663182235112824.regr  bc_d50_1664663453379648783.regr  box.yaml  config.yaml  goal_box.yaml
rpbi_examples/configs/nsl_haption/: box.yaml  config.yaml  keyboard_scale.yaml  keyboard_to_joy.yaml  kuka_lwr.yaml
rpbi_examples/configs/optas_kuka_lwr_expr/: config.yaml
rpbi_examples/configs/optas_kuka_lwr_expr2/: config.yaml  kuka_lwr.yaml
rpbi_examples/configs/pybullet_objects_example/: config.yaml  dynamic_box.yaml  visual_sphere.yaml  visualizer.yaml
rpbi_examples/configs/run_kuka/: config.yaml  config_dual.yaml  kuka_lwr.yaml  kuka_lwr_0.yaml  kuka_lwr_1.yaml
rpbi_examples/configs/run_pose/: config_human_model.yaml  config_kinova.yaml  config_kuka_lwr.yaml  config_talos.yaml  cup.mtl  cup.urdf  cup.yaml  human_model.yaml  kinova.yaml  kuka_lwr.yaml  table.yaml  talos.yaml  whiteboard.yaml
rpbi_examples/configs/soft_body/: config.yaml  cube.yaml  floor.yaml  plane.urdf  plane.yaml  torus.yaml  torus_deform.yaml
rpbi_examples/configs/teleop/: config.yaml  keyboard_to_joy.yaml  kuka_lwr.yaml  teleop.yaml
rpbi_examples/configs/teleoperation/: config.yaml
rpbi_examples/configs/teleoperation_eff_demo/: kuka_lwr.yaml
rpbi_examples/launch/: basic_example.launch  basic_example_abb_yumi.launch  basic_example_chonk.launch  basic_example_human_model.launch  basic_example_kinova.launch  basic_example_kuka_lbr.launch  basic_example_kuka_lwr.launch  basic_example_nextage.launch  basic_example_talos.launch  control_visualizer_with_touch_x_haptic_device.launch  dmp_example.launch  human_interaction.launch  interpolation.launch  lfd.launch  lidar_example.launch  nsl.launch  nsl_haption.launch  optas_kuka_lwr_expr.launch  optas_kuka_lwr_expr2.launch  pybullet_objects_example.launch  pybullet_rgbd_example.launch  run_dual_kukas.launch  run_kuka.launch  run_pose_human_model.launch  run_pose_kinova.launch  run_pose_kuka_lwr.launch  run_pose_talos.launch  soft_body.launch  teleop.launch  teleoperation_eff_demo.launch  teleoperation_example.launch  teleoperation_joint_demo.launch
rpbi_examples/robots/: example.urdf  human_model.urdf  kuka_lwr.urdf
rpbi_examples/rviz/: teleoperation_eff_demo.rviz
rpbi_examples/scripts/: basic_robot_example_node.py  nsl.py  nsl_haption.py  orbit_node.py  pybullet_objects_example_node.py  run_dmp_example.py  run_human_interaction.py  run_interpolation.py  run_lfd.py  run_teleop.py  run_teleoperation_eff_demo.py  run_teleoperation_joint_demo.py
rpbi_utils/: CMakeLists.txt  package.xml  setup.py
rpbi_utils/scripts/: calibrate_wrench_node.py  control_debug_visualizer_camera_by_tf.py  control_debug_visualizer_camera_with_touch_x.py  interpolation_node.py  map_geomagic_touch_x_to_tf.py
(+354 files in other folders)
