<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_pybullet_interface</name>
  <version>0.0.0</version>
  <description>The ros_pybullet_interface package</description>

  <maintainer email="chris.mower@ed.ac.uk">Christopher E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/ros_pybullet_interface</url>
  <author email="chris.mower@ed.ac.uk">Christopher E. Mower</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>python-yaml</depend>
  <depend>python3-pybullet-pip</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>keyboard</depend> -->
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
