<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_pybullet_interface</name>
  <version>2.0.0</version>
  <description>The ros_pybullet_interface package</description>
  <maintainer email="chris.mower@ed.ac.uk">Christopher E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/ros_pybullet_interface</url>
  <author email="chris.mower@ed.ac.uk">Christopher E. Mower</author>
  <author>Theodoros Stouraitis</author>
  <author>Lei Yan</author>
  <author>Joao Moura</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>std_srvs</depend>
  <depend>cob_srvs</depend>
  <depend>python3-pybullet-pip</depend>
  <depend>python3-numpy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
