<?xml version="1.0"?>
<package format="2">
  <name>rpbi_examples</name>
  <version>1.0.0</version>
  <description>The rpbi_examples package</description>
  <maintainer email="chris.mower@ed.ac.uk">Christopher E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/ros_pybullet_interface</url>
  <author email="chris.mower@ed.ac.uk">Christopher E. Mower</author>
  <author>Theodoros Stouraitis</author>
  <author>Lei Yan</author>
  <author>Joao Moura</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>ik_ros_examples</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_pybullet_interface</depend>
</package>
