<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpbi_utils</name>
  <version>0.0.0</version>
  <description>The rpbi_utils package</description>
  <maintainer email="chris.mower@ed.ac.uk">Christopher E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/ros_pybullet_interface</url>
  <author email="chris.mower@ed.ac.uk">Christopher E. Mower</author>
  <author>Theodoros Stouraitis</author>
  <author>Lei Yan</author>
  <author>Joao Moura</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>python-numpy</depend>
  <depend>python-scipy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
